--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "mongoclient": "^1.0.3",
     "mongodb": "^4.12.1",
-    "openai": "^3.1.0"
+    "openai": "^3.1.0",
+    "requirejs": "^2.3.6"
   }
 }
