--- a/Docker-Compose.yml
+++ b/Docker-Compose.yml
@@ -1,9 +1,9 @@
 version: "3"
 services:
-  openai-image-generator:
-    image: 856187450469.dkr.ecr.us-east-1.amazonaws.com/openai-image-generator:1.2
-    ports:
-      - 5000:5000
+  # openai-image-generator:
+  #   image: 856187450469.dkr.ecr.us-east-1.amazonaws.com/openai-image-generator:1.2
+  #   ports:
+  #     - 5000:5000
   mongodb:
     image: mongo
     ports:
@@ -11,6 +11,8 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=davidamebley
       - MONGO_INITDB_ROOT_PASSWORD=password
+    volumes:
+      - mongo-data:/data/db
   mongo-express:
     image: mongo-express
     ports:
@@ -20,3 +22,7 @@ services:
       - ME_CONFIG_MONGODB_ADMINPASSWORD=password
       - ME_CONFIG_MONGODB_SERVER=mongodb
 
+volumes:
+  mongo-data:
+    driver:
+      local
